--- a/FAL_FileIO.ipynb
+++ b/FAL_FileIO.ipynb
@@ -64,10 +64,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 3722\n",
+      "b: 755\n",
+      "c: 1421\n",
+      "d: 2147\n",
+      "e: 6009\n",
+      "f: 1185\n",
+      "g: 1382\n",
+      "h: 2992\n",
+      "i: 3640\n",
+      "j: 153\n",
+      "k: 612\n",
+      "l: 1963\n",
+      "m: 971\n",
+      "n: 3695\n",
+      "o: 3896\n",
+      "p: 1095\n",
+      "q: 45\n",
+      "r: 3122\n",
+      "s: 2997\n",
+      "t: 4698\n",
+      "u: 1466\n",
+      "v: 378\n",
+      "w: 1145\n",
+      "x: 60\n",
+      "y: 998\n",
+      "z: 33\n"
+     ]
+    }
+   ],
+   "source": [
+    "#frequency table    \n",
+    "freq = {\n",
+    "    \"a\":0, \"b\":0, \"c\":0, \"d\":0,\n",
+    "    \"e\":0, \"f\":0, \"g\":0, \"h\":0,\n",
+    "    \"i\":0, \"j\":0, \"k\":0, \"l\":0, \n",
+    "    \"m\":0, \"n\":0, \"o\":0, \"p\":0,\n",
+    "    \"q\":0, \"r\":0, \"s\":0, \"t\":0,\n",
+    "    \"u\":0, \"v\":0, \"w\":0, \"x\":0,\n",
+    "    \"y\":0, \"z\":0 }\n",
+    "\n",
+    "with open(\"book.txt\", \"r\") as file:\n",
+    "    lines = file.readlines()\n",
+    "    for line in lines:\n",
+    "        for ch in line:\n",
+    "            ch = ch.lower()\n",
+    "            if ch in freq:\n",
+    "               freq[ch] = freq[ch] + 1\n",
+    "for x in freq:\n",
+    "    print(f\"{x}:\", freq[x] )\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,7 +145,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#frequency table    \n",
+    "freq = {\n",
+    "    \"a\":0, \"b\":0, \"c\":0, \"d\":0,\n",
+    "    \"e\":0, \"f\":0, \"g\":0, \"h\":0,\n",
+    "    \"i\":0, \"j\":0, \"k\":0, \"l\":0, \n",
+    "    \"m\":0, \"n\":0, \"o\":0, \"p\":0,\n",
+    "    \"q\":0, \"r\":0, \"s\":0, \"t\":0,\n",
+    "    \"u\":0, \"v\":0, \"w\":0, \"x\":0,\n",
+    "    \"y\":0, \"z\":0 }\n",
+    "\n",
+    "with open(\"book.txt\", \"r\") as file:\n",
+    "    lines = file.readlines()\n",
+    "    for line in lines:\n",
+    "        for ch in line:\n",
+    "            ch = ch.lower()\n",
+    "            \n",
+    "            if ch in freq:\n",
+    "               freq[ch] = freq[ch] + 1\n",
+    "for x in freq:\n",
+    "    print(f\"{x}:\", freq[x])\n",
+    "\n",
+    "    ### Just for Fun! Break this Caesar Cipher\n",
+    "\n",
+    "coded_m = \n",
+    "PA PZ H WLYPVK VM JPCPS DHY. YLILS ZWHJLZOPWZ, ZAYPRPUN MYVT H OPKKLU IHZL, OHCL DVU AOLPY MPYZA CPJAVYF HNHPUZA AOL LCPS NHSHJAPJ LTWPYL. KBYPUN AOL IHAASL, YLILS ZWPLZ THUHNLK AV ZALHS ZLJYLA WSHUZ AV AOL LTWLYVY'Z BSAPTHAL DLHWVU, AOL KLHAO ZAHY, HU HYTVYLK ZWHJL ZAHAPVU DPAO LUVBNO WVDLY AV KLZAYVF HU LUAPYL WSHULA. WBYZBLK IF AOL LTWLYVY'Z ZPUPZALY HNLUAZ, WYPUJLZZ SLPH YHJLZ OVTL HIVHYK OLY ZAHYZOPW, JBZAVKPHU VM AOL ZAVSLU WSHUZ AOHA JHU ZHCL OLY WLVWSL HUK YLZAVYL MYLLKVT AV AOL NHSHEF ....\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,13 +230,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
